@@ -108,6 +108,9 @@ document.write("Last Published: " + document.lastModified);
 <a href="index.html">Overview</a>
 </div>
 <div class="menuitem">
+<a href="api/overview-summary.html#overview_description">Getting Started</a>
+</div>
+<div class="menuitem">
 <a href="api/index.html">API Docs</a>
 </div>
 <div class="menuitem">
@@ -159,6 +162,12 @@ document.write("Last Published: " + document.lastModified);
 <ul>
 <li>
 <a href="index.html">Overview</a>&nbsp;&nbsp;___________________&nbsp;&nbsp;<em>overview</em>
+</li>
+</ul>
+    
+<ul>
+<li>
+<a href="api/overview-summary.html#overview_description">Getting Started</a>&nbsp;&nbsp;___________________&nbsp;&nbsp;<em>started</em>
 </li>
 </ul>
     
